# s25client

./: CMakeLists.txt  build_paths.h.cmake
cmake/: c.linux.cmake  linux.cmake
driver/audio/SDL/src/: CMakeLists.txt
driver/video/: CMakeLists.txt
driver/video/GLFW/src/: CMakeLists.txt
driver/video/SDL/src/: CMakeLists.txt
extras/videoDrivers/: CMakeLists.txt
libs/libGamedata/: CMakeLists.txt
src/: CMakeLists.txt
